@@ -59,7 +59,7 @@
  */
 
 #ifdef HAVE_CONFIG_H
-#include <config.h>
+#include <config.h> 
 #endif /*HAVE_CONFIG_H*/
 #include <vips/intl.h>
 
